objects/ssot__PatientHealthConditionDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionCodeId__c</fullName>
        <label>Health Condition Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionCodeObject__c</fullName>
        <label>Health Condition Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Health Conditon Detail Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientHealthConditionDetailType__c</fullName>
        <label>Patient Health Condition Detail Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientHealthConditionId__c</fullName>
        <label>Patient Health Condition</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721966105_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthConditionDetail_HealthC_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>PatientHealthConditionDetail_HealthC_rel</relationshipLabel>
        <relationshipName>rel_1716721966105_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721974255_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthConditionDetail_HealthC_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientHealthConditionDetail_HealthC_rel</relationshipLabel>
        <relationshipName>rel_1716721974255_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725639858_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthConditionDetail_Patient_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>PatientHealthConditionDetail_Patient_rel</relationshipLabel>
        <relationshipName>rel_1716725639858_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>